config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipam-apiserver
  namespace: ipam-system
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: ipam-apiserver
